testing/framework/resources/Advanced/Failing/mondrian/query2455.q
select agg_c_14_sales_fact_1997.the_year as c0, RTRIM(promotion_name) as c1, sum(agg_c_14_sales_fact_1997.unit_sales) as m0 from agg_c_14_sales_fact_1997 as agg_c_14_sales_fact_1997, promotion as promotion where agg_c_14_sales_fact_1997.the_year = 1997 and agg_c_14_sales_fact_1997.promotion_id = promotion.promotion_id group by agg_c_14_sales_fact_1997.the_year, RTRIM(promotion_name);
